Update the about page

--- a/about.html
+++ b/about.html
@@ -1,1 +1,50 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Our Heritage | Innovet Tech</title>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+</head>
+<body class="bg-stone-950 text-stone-300 antialiased">
+    <header class="sticky top-0 z-40 w-full backdrop-blur-md border-b border-amber-500/20 bg-stone-950/80 px-6">
+        <div class="container mx-auto flex h-20 items-center justify-between">
+            <div class="flex items-center gap-3">
+                <div class="w-10 h-10 bg-gradient-to-tr from-amber-600 to-amber-300 rounded-lg flex items-center justify-center shadow-[0_0_15px_rgba(245,158,11,0.3)]">
+                    <span class="text-stone-950 font-black text-xl italic">I</span>
+                </div>
+                <span class="text-2xl font-bold tracking-tight text-white uppercase">Innovet<span class="text-amber-500 font-light">Tech</span></span>
+            </div>
+            <nav>
+                <ul class="flex space-x-8 font-medium">
+                    <li><a href="index.html" class="hover:text-amber-400 transition">Home</a></li>
+                    <li><a href="services.html" class="hover:text-amber-400 transition">Services</a></li>
+                    <li><a href="team.html" class="hover:text-amber-400 transition">Team</a></li>
+                    <li><a href="contact.html" class="hover:text-amber-400 transition">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
+    <main class="py-24">
+        <section class="container mx-auto px-6 mb-24">
+            <div class="max-w-3xl">
+                <h1 class="text-6xl font-black text-white mb-8">A Decade of <span class="text-amber-500 italic">Excellence.</span></h1>
+                <p class="text-xl leading-relaxed text-stone-400">Innovet Tech was founded on a simple principle: technology should be as stable as gold. Since 2010, we have redefined digital landscapes for global leaders.</p>
+            </div>
+        </section>
+
+        <section class="container mx-auto px-6 grid md:grid-cols-2 gap-12">
+            <div class="p-12 bg-stone-900 border border-amber-500/10 rounded-3xl relative overflow-hidden group">
+                <div class="absolute top-0 right-0 w-32 h-32 bg-amber-500/5 blur-3xl group-hover:bg-amber-500/10 transition"></div>
+                <h2 class="text-amber-500 font-bold uppercase tracking-widest text-sm mb-4">Our Mission</h2>
+                <p class="text-2xl text-white font-light">To engineer the most reliable and secure enterprise solutions that serve as the foundation for the world's most innovative brands.</p>
+            </div>
+            <div class="p-12 bg-stone-950 border border-stone-800 rounded-3xl">
+                <h2 class="text-amber-500 font-bold uppercase tracking-widest text-sm mb-4">The Standard</h2>
+                <p class="text-lg text-stone-400">We don't just provide services; we provide the "Gold Standard" of consulting, ensuring every line of code adds tangible value to your equity.</p>
+            </div>
+        </section>
+    </main>
+</body>
+</html>
