add services, teams, terms of service and privacy

--- a/privacy.html
+++ b/privacy.html
@@ -1,1 +1,49 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Privacy Protocol | Innovet Tech</title>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+</head>
+<body class="bg-stone-950 text-stone-300 antialiased">
 
+    <nav class="h-20 border-b border-stone-900 flex items-center px-6">
+        <a href="index.html" class="flex items-center gap-3 group">
+            <i class="fa-solid fa-arrow-left text-amber-500 group-hover:-translate-x-1 transition-transform"></i>
+            <span class="text-white font-black uppercase tracking-tighter">Back to <span class="text-amber-500 font-light">HQ</span></span>
+        </a>
+    </nav>
+
+    <main class="py-24 container mx-auto px-6 max-w-4xl">
+        <header class="mb-16">
+            <span class="text-amber-500 font-mono text-xs tracking-[0.4em] uppercase">Security Protocol 04-A</span>
+            <h1 class="text-5xl font-black text-white mt-4 mb-2 uppercase">Privacy <span class="text-amber-500">Protocol</span></h1>
+            <p class="text-stone-500 font-mono text-sm uppercase italic tracking-tighter">Last Revised: February 2026</p>
+        </header>
+
+        <section class="space-y-12 leading-relaxed">
+            <div class="border-l-2 border-amber-500/30 pl-8">
+                <h2 class="text-white text-xl font-bold mb-4 uppercase tracking-wide">01. Data Ingestion</h2>
+                <p>We collect essential telemetry and professional credentials provided during the application process. This data is encrypted via AES-256 standard and stored within our secure cloud silos.</p>
+            </div>
+
+            <div class="border-l-2 border-stone-800 pl-8">
+                <h2 class="text-white text-xl font-bold mb-4 uppercase tracking-wide">02. Usage Logic</h2>
+                <p>Your information is utilized exclusively for cultural and technical matching. Innovet Tech does not sell, lease, or distribute your dossier to third-party entities for marketing purposes.</p>
+            </div>
+
+            <div class="border-l-2 border-stone-800 pl-8">
+                <h2 class="text-white text-xl font-bold mb-4 uppercase tracking-wide">03. Right to Erasure</h2>
+                <p>In accordance with global digital rights standards, users may request the permanent decommissioning of their data from our servers at any time via the <a href="contact.html" class="text-amber-500 underline underline-offset-4">Security Channel</a>.</p>
+            </div>
+        </section>
+    </main>
+
+    <footer class="py-12 border-t border-stone-900 text-center text-xs opacity-40 uppercase tracking-[0.5em]">
+        Innovet Tech // Data Protection Division
+    </footer>
+
+</body>
+</html>
