--- a/terms.html
+++ b/terms.html
@@ -1,1 +1,46 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Terms of Service | Innovet Tech</title>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+</head>
+<body class="bg-stone-950 text-stone-300 antialiased">
+
+    <nav class="h-20 border-b border-stone-900 flex items-center px-6">
+        <a href="index.html" class="flex items-center gap-3 group">
+            <i class="fa-solid fa-arrow-left text-amber-500 group-hover:-translate-x-1 transition-transform"></i>
+            <span class="text-white font-black uppercase tracking-tighter">Exit to <span class="text-amber-500 font-light">Mainframe</span></span>
+        </a>
+    </nav>
+
+    <main class="py-24 container mx-auto px-6 max-w-4xl">
+        <header class="mb-16">
+            <span class="text-amber-500 font-mono text-xs tracking-[0.4em] uppercase">Terms of Engagement</span>
+            <h1 class="text-5xl font-black text-white mt-4 mb-2 uppercase">Service <span class="text-amber-500">Agreement</span></h1>
+            <p class="text-stone-500 font-mono text-sm uppercase italic tracking-tighter">Effective Date: 2026.02.11</p>
+        </header>
+
+        <section class="space-y-12 leading-relaxed">
+            <div class="bg-stone-900/40 p-10 rounded-3xl border border-stone-800">
+                <h2 class="text-white text-xl font-bold mb-4 uppercase tracking-wide">01. Professional Integrity</h2>
+                <p>Users of the Innovet Tech platform agree to provide accurate, non-fraudulent documentation. Any attempt to compromise our security layers or "spoof" credentials will result in an immediate and permanent blacklisting from our systems.</p>
+            </div>
+
+            <div class="bg-stone-900/40 p-10 rounded-3xl border border-stone-800">
+                <h2 class="text-white text-xl font-bold mb-4 uppercase tracking-wide">02. Intellectual Property</h2>
+                <p>All design assets, code structures, and proprietary "Gold Standard" methodologies displayed on this platform are the sole property of Innovet Tech. Unauthorized replication is strictly prohibited.</p>
+            </div>
+
+            <div class="bg-stone-900/40 p-10 rounded-3xl border border-stone-800">
+                <h2 class="text-white text-xl font-bold mb-4 uppercase tracking-wide">03. Liability Limitations</h2>
+                <p>While we strive for 100% architectural uptime, Innovet Tech is not responsible for data transmission delays caused by external network failures or local hardware constraints.</p>
+            </div>
+        </section>
+    </main>
+
+</body>
+</html>
