add a file upload and a success page.

--- a/contact.html
+++ b/contact.html
@@ -36,11 +36,11 @@
                     <div class="space-y-8">
                         <div>
                             <span class="block text-xs font-black uppercase tracking-widest opacity-60">Global HQ</span>
-                            <p class="text-lg font-bold">The Gilded Tower, Suite 100<br>Zurich, Switzerland</p>
+                            <p class="text-lg font-bold">The Times Tower, Suite 100<br>Nairobi, Kenya</p>
                         </div>
                         <div>
                             <span class="block text-xs font-black uppercase tracking-widest opacity-60">Digital</span>
-                            <p class="text-lg font-bold">concierge@innovet.tech</p>
+                            <p class="text-lg font-bold">support@innovet.tech</p>
                         </div>
                     </div>
                 </div>
