--- a/team.html
+++ b/team.html
@@ -12,8 +12,8 @@
     <header class="sticky top-0 z-40 w-full backdrop-blur-md border-b border-amber-500/20 bg-stone-950/80 px-6">
         <div class="container mx-auto flex h-20 items-center justify-between">
             <div class="flex items-center gap-3">
-                <div class="w-10 h-10 bg-gradient-to-tr from-amber-600 to-amber-300 rounded-lg flex items-center justify-center shadow-lg shadow-amber-500/20">
-                    <span class="text-stone-950 font-black text-xl italic">I</span>
+                <div class="w-10 h-10 bg-gradient-to-tr from-amber-600 to-amber-300 rounded-lg flex items-center justify-center shadow-[0_0_15px_rgba(245,158,11,0.3)] overflow-hidden">
+                    <img src="images/logo.png" alt="Innovet Tech Logo" class="w-full h-full object-contain p-1.5">
                 </div>
                 <span class="text-2xl font-bold tracking-tight text-white uppercase">Innovet<span class="text-amber-500 font-light">Tech</span></span>
             </div>
